{
  "version": 4,
  "terraform_version": "1.7.2",
  "serial": 79,
  "lineage": "f77cfc98-2375-38e1-ddd7-ceaca1310d34",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:227992691707:vpc/vpc-072497f57870de62e",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0ff9a3c8814541020",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-077ddb085164d0fc7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-072497f57870de62e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f0a398e4a179c4ee",
            "owner_id": "227992691707"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:227992691707:loadbalancer/app/untitled-prod/cbcf9d02afdf7db1",
            "arn_suffix": "app/untitled-prod/cbcf9d02afdf7db1",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "untitled-prod-849734779.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:227992691707:loadbalancer/app/untitled-prod/cbcf9d02afdf7db1",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "untitled-prod",
            "preserve_host_header": false,
            "security_groups": [
              "sg-04113726b0e11fb18"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0161f49fc80801288"
              },
              {
                "subnet_id": "subnet-0234295eb7714ffb1"
              },
              {
                "subnet_id": "subnet-0430de4cfe632d307"
              },
              {
                "subnet_id": "subnet-061ca3136401174bd"
              },
              {
                "subnet_id": "subnet-07c55ffd8a3107f35"
              },
              {
                "subnet_id": "subnet-0e6763893ed4d2120"
              }
            ],
            "subnets": [
              "subnet-0161f49fc80801288",
              "subnet-0234295eb7714ffb1",
              "subnet-0430de4cfe632d307",
              "subnet-061ca3136401174bd",
              "subnet-07c55ffd8a3107f35",
              "subnet-0e6763893ed4d2120"
            ],
            "tags": {
              "Environment": "prod",
              "Name": "untitled-prod"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "untitled-prod"
            },
            "vpc_id": "vpc-072497f57870de62e",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:227992691707:listener/app/untitled-prod/cbcf9d02afdf7db1/7fd2700c59e9009e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:227992691707:targetgroup/untitled-prod/cf4876b7dd5854b7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:227992691707:listener/app/untitled-prod/cbcf9d02afdf7db1/7fd2700c59e9009e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:227992691707:loadbalancer/app/untitled-prod/cbcf9d02afdf7db1",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.app",
            "aws_security_group.alb",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:227992691707:targetgroup/untitled-prod/cf4876b7dd5854b7",
            "arn_suffix": "targetgroup/untitled-prod/cf4876b7dd5854b7",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:227992691707:targetgroup/untitled-prod/cf4876b7dd5854b7",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:227992691707:loadbalancer/app/untitled-prod/cbcf9d02afdf7db1"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "untitled-prod",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "prod",
              "Name": "untitled-prod"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "untitled-prod"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-072497f57870de62e"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:227992691707:security-group/sg-04113726b0e11fb18",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04113726b0e11fb18",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "untitled-alb20250617020218798200000001",
            "name_prefix": "untitled-alb",
            "owner_id": "227992691707",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "untitled-alb"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "untitled-alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-072497f57870de62e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:227992691707:security-group/sg-0441ada1a2a4c39ed",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0441ada1a2a4c39ed",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04113726b0e11fb18"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "untitled-ecs-tasks20250615004044471500000001",
            "name_prefix": "untitled-ecs-tasks",
            "owner_id": "227992691707",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "untitled-ecs-tasks"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "untitled-ecs-tasks"
            },
            "timeouts": null,
            "vpc_id": "vpc-072497f57870de62e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:227992691707:security-group/sg-06fd877b6254853ce",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06fd877b6254853ce",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0441ada1a2a4c39ed"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "untitled-rds20250619004555709400000001",
            "name_prefix": "untitled-rds",
            "owner_id": "227992691707",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "untitled-rds"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "untitled-rds"
            },
            "timeouts": null,
            "vpc_id": "vpc-072497f57870de62e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs_tasks",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:227992691707:security-group/sg-0ac646222f117f468",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ac646222f117f468",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Redis port from ECS tasks",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0441ada1a2a4c39ed"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "untitled-redis20250620193441295300000001",
            "name_prefix": "untitled-redis",
            "owner_id": "227992691707",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "untitled-redis"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "untitled-redis"
            },
            "timeouts": null,
            "vpc_id": "vpc-072497f57870de62e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs_tasks",
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}